--- a/packages/extension/res/chrome/manifest.json
+++ b/packages/extension/res/chrome/manifest.json
@@ -1,7 +1,8 @@
 {
   "manifest_version": 2,
   "name": "__MSG_extension_name__",
-  "version": "0.0.2",
+  "version": "0.1.0",
+  "version_name": "0.1.0",
   "description": "__MSG_extension_description__",
   "default_locale": "zh_CN",
   "icons": {
