--- a/packages/extension/res/chrome_v3/manifest.json
+++ b/packages/extension/res/chrome_v3/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "__MSG_extension_name__",
-  "version": "0.0.2",
-  "version_name": "dev",
+  "version": "0.1.0",
+  "version_name": "0.1.0 dev",
   "description": "__MSG_extension_description__",
   "default_locale": "zh_CN",
   "icons": {
