--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -5,12 +5,17 @@
   "author": "Baotlake baotlake@gmail.com",
   "license": "SEE LISENSE IN LISENSE.md",
   "scripts": {
-    "start:firefox": "yarn build; NODE_ENV=development BROWSER=firefox webpack --config webpack.config.js --watch",
-    "start": "NODE_ENV=development webpack --config webpack.config.js --watch",
+    "start:firefox": "NODE_ENV=development BROWSER=firefox webpack --config webpack.config.js --watch",
     "start:worker": "NODE_ENV=development node build.js",
-    "build": "NODE_ENV=production node build.js; webpack --config webpack.config.js; webpack --config webpack.copy.js",
+    "start": "NODE_ENV=development webpack --config webpack.config.js --watch",
+    "build:chrome_v3": "NODE_ENV=production node build.js & webpack --config webpack.config.js",
+    "build:chrome": "NODE_ENV=production BROWSER=chrome node build.js & NODE_ENV=production BROWSER=chrome webpack --config webpack.config.js",
+    "build:firefox": "NODE_ENV=production BROWSER=firefox webpack --config webpack.config.js",
+    "build": "yarn build:chrome_v3",
     "zip:firefox": "cd dist/firefox; zip ../firefox_`date +%m_%d`.zip -r *",
-    "zip": "cd dist/chrome_v3; zip ../chrome_v3_`date +%m_%d`.zip -r *"
+    "zip:chrome_v3": "cd dist/chrome_v3; zip ../chrome_v3_`date +%m_%d`.zip -r *",
+    "zip:chrome": "cd dist/chrome; zip ../chrome_`date +%m_%d`.zip -r *",
+    "zip": "yarn zip:chrome_v3"
   },
   "dependencies": {
     "@wrp/core": "*",
