--- a/packages/website-view/netlify.toml
+++ b/packages/website-view/netlify.toml
@@ -1,5 +1,5 @@
 [build]
     base = "packages/website-view"
-    publish = "packages/website-view/src"
+    publish = "./src"
     command = "echo 'build'"
 
