--- a/packages/website-view/package.json
+++ b/packages/website-view/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "rollup": "^2.67.0"
-  }
+    "@types/nprogress": "^0.2.0"
+  },
+  "main": "index.js"
 }
