--- a/packages/website/public/manifest.json
+++ b/packages/website/public/manifest.json
@@ -5,21 +5,21 @@
   "display": "standalone",
 
   "manifest_version": 2,
-  "description": "Deep Reading - 轻松阅读英语，秒查词，秒翻译",
-  "version": "1.0",
+  "description": "青轻阅读 Deep Reading - 轻松阅读英语，秒查词，秒翻译",
+  "version": "1.1",
 
   "icons": [
     {
       "src": "logo_maskable.svg",
       "sizes": "512x512",
       "type": "image/svg",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     },
     {
       "src": "logo_512_maskable.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
   ],
   "background_color": "#CCE5ED",
