--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "deep-reading",
   "version": "0.0.1",
-  "repository": "https://github.com/BaotLake/wordreadingpro.git",
-  "author": "Baot Lake <BoatLake@gmail.com>",
+  "repository": "https://github.com/baotlake/deep-reading.git",
+  "author": "baotlake <boatlake@gmail.com>",
   "license": "SEE LICENSE IN LICENSE.md",
   "private": true,
   "keywords": [
@@ -64,6 +64,7 @@
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "acorn-jsx": "^5.3.2",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^3.4.0",
@@ -72,6 +73,7 @@
     "eslint-plugin-react": "^7.23.2",
     "glob-parent": "^5.1.2",
     "pdfjs-dist": "^2.6.347",
+    "postcss": "^8.4.14",
     "raw-loader": "^4.0.2",
     "rollup": "^2.67.0",
     "rollup-plugin-terser": "^7.0.2",
@@ -80,6 +82,7 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^3.0.0",
     "styled-components": "^5.3.3",
+    "tailwindcss": "^3.0.24",
     "terser-webpack-plugin": "^5.1.4",
     "ts-loader": "^9.2.3",
     "typescript": "^4.1.5",
