--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "glob-parent": "^5.1.2",
     "pdfjs-dist": "^2.6.347",
     "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
     "raw-loader": "^4.0.2",
     "rollup": "^2.67.0",
     "rollup-plugin-terser": "^7.0.2",
