--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "esbuild": "^0.14.10",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
-    "react": "17.0",
-    "react-dom": "17.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-jss": "^10.7.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
@@ -58,7 +58,7 @@
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
     "@svgr/webpack": "^6.2.1",
-    "@types/react": "^17.0.27",
+    "@types/react": "17.0.45",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
@@ -72,6 +72,7 @@
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.23.2",
     "glob-parent": "^5.1.2",
+    "next": "^12.1.6",
     "pdfjs-dist": "^2.6.347",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
@@ -91,6 +92,10 @@
     "webpack": "^5.40.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2"
+  },
+  "resolutions": {
+    "@types/react": "<18.0.0",
+    "@types/react-dom": "<18.0.0"
   },
   "engines": {
     "node": ">=14.0.0"
