--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,7 +24,6 @@
     ]
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^3.9.2",
     "babel-plugin-lodash": "^3.3.4",
     "lodash-es": "^4.17.21",
     "next": "^12.0.10",
@@ -34,9 +33,9 @@
     "react-dom": "17.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.8.0",
     "@types/lodash-es": "^4.17.4",
     "@types/nprogress": "^0.2.0",
-    "lodash-webpack-plugin": "^0.11.6",
-    "netlify-cli": "^6.13.2"
+    "lodash-webpack-plugin": "^0.11.6"
   }
 }
