--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "esbuild": "^0.14.10",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
+    "preact": "^10.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jss": "^10.7.1",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
