--- a/packages/website/public/manifest.json
+++ b/packages/website/public/manifest.json
@@ -16,6 +16,6 @@
       "purpose": "any maskable"
     }
   ],
-  "background_color": "#CCE5ED",
+  "background_color": "#FFFFFF",
   "theme_color": "#007CA3"
 }
