--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -2,15 +2,16 @@
   "name": "@wrp/extension",
   "version": "0.1.2",
   "private": true,
-  "author": "Baotlake baotlake@gmail.com",
+  "author": "baotlake baotlake@gmail.com",
   "license": "SEE LISENSE IN LISENSE.md",
   "scripts": {
-    "start:firefox": "NODE_ENV=development BROWSER=firefox webpack --config webpack.config.js --watch",
-    "start:worker": "NODE_ENV=development node build.js",
-    "start": "NODE_ENV=development webpack --config webpack.config.js --watch",
-    "build:chrome_v3": "NODE_ENV=production node build.js & webpack --config webpack.config.js",
-    "build:chrome": "NODE_ENV=production BROWSER=chrome node build.js & NODE_ENV=production BROWSER=chrome webpack --config webpack.config.js",
-    "build:firefox": "NODE_ENV=production BROWSER=firefox webpack --config webpack.config.js",
+    "start:firefox": "cross-env NODE_ENV=development BROWSER=firefox webpack --config webpack.config.js --watch",
+    "start:fast": "cross-env NODE_ENV=development node build.js",
+    "start": "cross-env NODE_ENV=development webpack --config webpack.config.js --watch",
+    "build:chrome_v3": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "build:chrome": "cross-env NODE_ENV=production BROWSER=chrome webpack --config webpack.config.js",
+    "build:firefox": "cross-env NODE_ENV=production BROWSER=firefox webpack --config webpack.config.js",
+    "build:fast": "cross-env NODE_ENV=production node build.js",
     "build": "yarn build:chrome_v3",
     "zip:firefox": "cd dist/firefox; zip ../firefox_`date +%m_%d`.zip -r *",
     "zip:chrome_v3": "cd dist/chrome_v3; zip ../chrome_v3_`date +%m_%d`.zip -r *",
