--- a/packages/website-view/package.json
+++ b/packages/website-view/package.json
@@ -2,10 +2,10 @@
   "name": "@deep-reading/website-view",
   "version": "0.0.1",
   "private": true,
-  "author": "Baotlake baotlake@gmail.com",
+  "author": "baotlake baotlake@gmail.com",
   "license": "SEE LISENSE IN LISENSE.md",
   "scripts": {
-    "build": "echo 'build'"
+    "build": "echo 'done'"
   },
   "dependencies": {},
   "devDependencies": {
