--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "scripts": {
     "build:website": "cd ./packages/ui; yarn build; cd ../core; yarn build; cd ../inject; yarn build; cd ../website; yarn build",
     "build:extension": "cd ./packages/core; yarn build; cd ../ui; yarn build; cd ../inject; yarn build; cd ../extension; yarn build",
+    "build:windows": "./tasks/build.bat",
     "build": "yarn build:website",
     "dev:website": "cd ./packages/website; yarn dev",
     "dev:extension": "cd ./packages/extension; yarn start",
-    "dev": "yarn dev:website",
-    "dev:a": "cd ./packages/core; yarn start & cd ../ui; yarn start"
+    "dev": "yarn dev:website"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -41,6 +41,7 @@
     "@zxing/library": "^0.18.6",
     "bowser": "^2.11.0",
     "classnames": "^2.3.1",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.14.10",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
@@ -76,7 +77,7 @@
     "eslint-plugin-react": "^7.23.2",
     "glob-parent": "^5.1.2",
     "mark.js": "^8.11.1",
-    "next": "^12.1.6",
+    "next": "12.1.6",
     "pdfjs-dist": "^2.6.347",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
@@ -95,7 +96,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.40.0",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "worker-loader": "^3.0.8"
   },
   "resolutions": {
     "@types/react": "<18.0.0",
