--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -2,7 +2,7 @@
   "name": "@wrp/website",
   "version": "0.1.0",
   "private": true,
-  "author": "Baotlake baotlake@gmail.com",
+  "author": "baotlake baotlake@gmail.com",
   "license": "SEE LISENSE IN LISENSE.md",
   "scripts": {
     "dev": "next dev",
@@ -27,7 +27,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "lodash-es": "^4.17.21",
     "next": "^12.0.10",
-    "next-pwa": "^5.2.21",
+    "next-pwa": "5.2.21",
     "nprogress": "^0.2.0",
     "react": "17.0",
     "react-dom": "17.0"
