--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -8,6 +8,7 @@
     "dev": "next dev",
     "start": "next start",
     "build": "next build",
+    "export": "next export",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
