--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -12,11 +12,11 @@
     "build:chrome": "cross-env NODE_ENV=production BROWSER=chrome webpack --config webpack.config.js",
     "build:firefox": "cross-env NODE_ENV=production BROWSER=firefox webpack --config webpack.config.js",
     "build:fast": "cross-env NODE_ENV=production node build.js",
-    "build": "yarn build:chrome_v3",
+    "build": "npm run build:chrome_v3",
     "zip:firefox": "cd dist/firefox; zip ../firefox_`date +%m_%d`.zip -r *",
     "zip:chrome_v3": "cd dist/chrome_v3; zip ../chrome_v3_`date +%m_%d`.zip -r *",
     "zip:chrome": "cd dist/chrome; zip ../chrome_`date +%m_%d`.zip -r *",
-    "zip": "yarn zip:chrome_v3"
+    "zip": "npm run zip:chrome_v3"
   },
   "dependencies": {
     "@wrp/core": "*",
