--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist/
 **/public/service-worker.js
 **/public/workbox-*.js
 **/public/*.js.map
+**/public/fallback-*.js
 
 tasks/deep-reading-code
 tasks/deep-reading-code.zip
