--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   ],
   "scripts": {
     "build:sub": "cd ./packages/ui && npm run build && cd ../core && npm run build && cd ../inject && npm run build",
-    "build:website": "npm run build:sub && cd ./packages/website && npm run build && npm run export",
+    "build:website": "npm run build:sub && cd ./packages/website && npm run build",
     "build:extension": "cd ./packages/core; yarn build; cd ../ui; yarn build; cd ../inject; yarn build; cd ../extension; yarn build",
     "build:windows": "./tasks/build.bat",
     "build": "yarn build:website",
+    "export": "npm run build:website && cd ./packages/webpack && npm run export",
     "dev:website": "cd ./packages/website; next dev",
     "dev:extension": "cd ./packages/extension; npm run start",
     "dev": "npm run dev:website"
@@ -78,7 +79,7 @@
     "eslint-plugin-react": "^7.23.2",
     "glob-parent": "^5.1.2",
     "mark.js": "^8.11.1",
-    "next": "12.1.6",
+    "next": "^12.3.0",
     "pdfjs-dist": "^2.6.347",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
