--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -28,7 +28,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "lodash-es": "^4.17.21",
     "next": "^12.0.10",
-    "next-pwa": "5.2.21",
+    "next-pwa": "^5.6.0",
     "nprogress": "^0.2.0",
     "react": "17.0",
     "react-dom": "17.0"
