fix start page styling & pnpm workspace config

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -21,7 +21,7 @@
         "isolatedModules": false,
         // "noEmit": true,
         "jsx": "react-jsx",
-        "baseUrl": "./",
+        "baseUrl": ".",
         "paths": {
             "@wrp/core": [
                 "../core"
