--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,12 @@ material/
 .eslintcache
 .sass-cache
 
-yarn.lock
+### required for digitalocean deployment
+# yarn.lock
+
+pnpm-lock.yaml
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log
+
