--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "dev": "npm run dev:website"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@mozilla/readability": "^0.4.2",
-    "@mui/core": "^5.0.0-alpha.54",
+    "@mui/base": "^5.0.0-alpha.98",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.50",
-    "@mui/material": "^5.0.3",
+    "@mui/material": "^5.10.6",
     "@mui/styles": "^5.0.1",
     "@reduxjs/toolkit": "^1.8.0",
     "@zxing/browser": "^0.0.10",
@@ -90,7 +90,6 @@
     "rollup-plugin-visualizer": "^5.6.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^3.0.0",
-    "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.24",
     "terser-webpack-plugin": "^5.1.4",
     "ts-loader": "^9.2.3",
