--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,7 +35,19 @@
     "dependencies": {
         "@types/lodash": "^4.14.170"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@rollup/plugin-alias": "^3.1.9",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-node-resolve": "^13.1.3",
+        "@rollup/plugin-replace": "^3.0.1",
+        "@rollup/plugin-typescript": "^8.3.0",
+        "rollup": "^2.67.0",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.31.2",
+        "rollup-plugin-visualizer": "^5.6.0",
+        "esbuild": "^0.14.10",
+        "cross-env": "^7.0.3"
+    },
     "babel": {
         "plugins": [
             "lodash"
