--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -28,6 +28,8 @@
     "copy-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^8.0.18",
+    "esbuild": "^0.14.10",
+    "dotenv": "^10.0.0",
     "webpack": "^5.25.1"
   }
 }
