--- a/packages/inject/package.json
+++ b/packages/inject/package.json
@@ -11,5 +11,19 @@
   },
   "main": "es/index.js",
   "module": "es/index.js",
-  "types": "es/index.d.ts"
+  "types": "es/index.d.ts",
+  "dependencies": {},
+  "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^3.0.1",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "rollup": "^2.67.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-visualizer": "^5.6.0",
+    "esbuild": "^0.14.10",
+    "cross-env": "^7.0.3"
+  }
 }
