--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,6 +31,33 @@
             "last 1 safari version"
         ]
     },
-    "dependencies": {},
-    "devDependencies": {}
+    "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/base": "^5.0.0-alpha.98",
+        "@mui/icons-material": "^5.10.6",
+        "@mui/lab": "^5.0.0-alpha.100",
+        "@mui/material": "^5.10.6",
+        "@mui/styles": "^5.10.6",
+        "@mui/system": "^5.10.6",
+        "@types/react": "^17.0.50",
+        "@types/react-dom": "^17.0.17",
+        "@types/styled-components": "^5.1.26",
+        "classnames": "^2.3.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    },
+    "devDependencies": {
+        "@rollup/plugin-alias": "^3.1.9",
+        "@rollup/plugin-commonjs": "^22.0.2",
+        "@rollup/plugin-node-resolve": "^14.1.0",
+        "@rollup/plugin-replace": "^4.0.0",
+        "@rollup/plugin-typescript": "^8.5.0",
+        "cross-env": "^7.0.3",
+        "esbuild": "^0.15.9",
+        "rollup": "^2.79.1",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.34.0",
+        "rollup-plugin-visualizer": "^5.8.1"
+    }
 }
