--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -25,6 +25,12 @@
     ]
   },
   "dependencies": {
+    "@mui/base": "^5.0.0-alpha.99",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "^5.0.0-alpha.101",
+    "@mui/material": "^5.10.7",
+    "@mui/styles": "^5.10.7",
+    "@mui/system": "^5.10.7",
     "babel-plugin-lodash": "^3.3.4",
     "lodash-es": "^4.17.21",
     "next": "^12.0.10",
