pnpm conifg, update dependencies

--- a/packages/inject/tsconfig.json
+++ b/packages/inject/tsconfig.json
@@ -28,15 +28,12 @@
     "baseUrl": "./",
     "rootDir": "./src",
     "paths": {
-      // "@wrp/ui": [
-      //   "../ui"
-      // ],
-      // "@wrp/core": [
-      //   "../core"
-      // ],
-      // "@wrp/inject": [
-      //   "./"
-      // ],
+      "@wrp/ui": [
+        "../ui"
+      ],
+      "@wrp/core": [
+        "../core"
+      ],
     }
   },
   "include": [
