--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start:firefox": "cross-env NODE_ENV=development BROWSER=firefox webpack --config webpack.config.js --watch",
     "start:fast": "cross-env NODE_ENV=development node build.js",
+    "start:crude": "cross-env NODE_ENV=development NO_SOURCE_MAP=1 webpack --config webpack.config.js --watch",
     "start": "cross-env NODE_ENV=development webpack --config webpack.config.js --watch",
     "build:chrome_v3": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "build:chrome": "cross-env NODE_ENV=production BROWSER=chrome webpack --config webpack.config.js",
@@ -19,17 +20,29 @@
     "zip": "npm run zip:chrome_v3"
   },
   "dependencies": {
-    "@wrp/core": "*",
-    "@wrp/ui": "*"
+    "@emotion/cache": "^11.10.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/base": "^5.0.0-alpha.99",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "^5.0.0-alpha.101",
+    "@mui/material": "^5.10.7",
+    "@mui/system": "^5.10.7",
+    "@wrp/core": "workspace:*",
+    "@wrp/inject": "workspace:^0.0.1",
+    "@wrp/ui": "workspace:*",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.133",
     "astroturf": "^1.0.1",
     "copy-webpack-plugin": "^8.0.0",
+    "dotenv": "^10.0.0",
+    "esbuild": "^0.14.10",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^8.0.18",
-    "esbuild": "^0.14.10",
-    "dotenv": "^10.0.0",
     "webpack": "^5.25.1"
   }
 }
