--- a/packages/inject/package.json
+++ b/packages/inject/package.json
@@ -12,13 +12,26 @@
   "main": "es/index.js",
   "module": "es/index.js",
   "types": "es/index.d.ts",
+  "files": [
+    "./es/*",
+    "./dist/*"
+  ],
   "dependencies": {
+    "@emotion/cache": "^11.10.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@mui/base": "^5.0.0-alpha.99",
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.101",
     "@mui/material": "^5.10.7",
     "@mui/styles": "^5.10.7",
-    "@mui/system": "^5.10.7"
+    "@mui/system": "^5.10.7",
+    "@wrp/core": "workspace:*",
+    "@wrp/ui": "workspace:*",
+    "lodash-es": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.9",
@@ -26,11 +39,11 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.14.10",
     "rollup": "^2.67.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
-    "rollup-plugin-visualizer": "^5.6.0",
-    "esbuild": "^0.14.10",
-    "cross-env": "^7.0.3"
+    "rollup-plugin-visualizer": "^5.6.0"
   }
 }
