--- a/packages/extension/res/chrome_v3/manifest.json
+++ b/packages/extension/res/chrome_v3/manifest.json
@@ -24,7 +24,7 @@
     "default_title": "Deep Reading",
     "default_popup": "popup.html"
   },
-  "options_page": "popup.html",
+  "options_page": "options.html",
   "permissions": ["tabs", "activeTab", "storage", "scripting", "contextMenus"],
   "web_accessible_resources": [
     {
