--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -8,7 +8,9 @@
             "esnext"
         ],
         "outDir": "./es",
-        "declaration": false,
+        "preserveSymlinks": true,
+        "declaration": true,
+        "declarationMap": true,
         "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
