--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   ],
   "workspaces": [
     "packages/core",
-    "packages/extension",
-    "packages/inject",
     "packages/ui",
-    "packages/website"
+    "packages/inject",
+    "packages/website",
+    "packages/extension"
   ],
   "scripts": {
     "build:sub": "cd ./packages/ui && npm run build && cd ../core && npm run build && cd ../inject && npm run build",
@@ -33,12 +33,12 @@
     "@emotion/cache": "^11.10.3",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mozilla/readability": "^0.4.2",
     "@mui/base": "^5.0.0-alpha.99",
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.101",
-    "@mui/material": "^5.10.7",
+    "@mui/material": "^5.10.10",
     "@mui/system": "^5.10.7",
-    "@mozilla/readability": "^0.4.2",
     "@reduxjs/toolkit": "^1.8.0",
     "@zxing/browser": "^0.0.10",
     "@zxing/library": "^0.18.6",
@@ -65,6 +65,7 @@
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
     "@svgr/webpack": "^6.2.1",
+    "@types/node": "^18.11.0",
     "@types/react": "17.0.45",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.24",
@@ -94,6 +95,7 @@
     "tailwindcss": "^3.0.24",
     "terser-webpack-plugin": "^5.1.4",
     "ts-loader": "^9.2.3",
+    "tslib": "^2.4.0",
     "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.40.0",
