--- a/packages/inject/package.json
+++ b/packages/inject/package.json
@@ -30,6 +30,8 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/chrome": "^0.0.197",
+    "@types/lodash-es": "^4.17.4",
     "cross-env": "^7.0.3",
     "esbuild": "^0.14.10",
     "rollup": "^2.67.0",
