--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,9 +32,14 @@
         ]
     },
     "dependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/base": "5.0.0-alpha.101",
+        "@mui/lab": "5.0.0-alpha.103",
+        "@mui/material": "^5.10.9",
+        "@mui/system": "^5.10.9",
         "@types/react": "^17.0.50",
         "@types/react-dom": "^17.0.17",
-        "@types/styled-components": "^5.1.26",
         "classnames": "^2.3.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
