--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -25,6 +25,7 @@
     "@wrp/core": "workspace:*",
     "@wrp/inject": "workspace:^0.0.1",
     "@wrp/ui": "workspace:*",
+    "postcss-loader": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
