--- a/packages/inject/package.json
+++ b/packages/inject/package.json
@@ -17,8 +17,8 @@
     "./dist/*"
   ],
   "dependencies": {
-    "@wrp/core": "workspace:*",
-    "@wrp/ui": "workspace:*",
+    "@wrp/core": "*",
+    "@wrp/ui": "*",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
