--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -22,10 +22,11 @@
     "zip": "npm run zip:chrome_v3"
   },
   "dependencies": {
-    "@wrp/core": "workspace:*",
-    "@wrp/inject": "workspace:^0.0.1",
-    "@wrp/ui": "workspace:*",
+    "@wrp/core": "*",
+    "@wrp/inject": "*",
+    "@wrp/ui": "*",
     "postcss-loader": "^7.0.0",
+    "postcss-nested": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
