--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -31,8 +31,8 @@
     "@mui/material": "^5.10.7",
     "@mui/styles": "^5.10.7",
     "@mui/system": "^5.10.7",
-    "@wrp/core": "workspace:^0.0.1",
-    "@wrp/inject": "workspace:^0.0.1",
+    "@wrp/core": "*",
+    "@wrp/inject": "*",
     "babel-plugin-lodash": "^3.3.4",
     "lodash-es": "^4.17.21",
     "next": "^12.0.10",
